app component init

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background: linear-gradient(#4c51b9, #9198e5,#be3455)
+};
