--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,25 @@
 
 <p-menubar [model]="items"></p-menubar>
 <router-outlet></router-outlet>
-<p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [containerStyle]="{ 'max-width': '100%' }" [numVisible]="5" >
-    <ng-template pTemplate="item" let-item>
-        <img [src]="item.itemImageSrc" style="width: 100%;" />
-    </ng-template>
-    <ng-template pTemplate="thumbnail" let-item>
-        <div class="grid grid-nogutter justify-content-center">
-            <img [src]="item.thumbnailImageSrc" />
-        </div>
-    </ng-template>
-</p-galleria>
+<div class="galeria">
+    <p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [containerStyle]="{ 'max-width': '100%' }" [numVisible]="5" >
+        <ng-template pTemplate="item" let-item>
+            <img [src]="item.itemImageSrc" style="width: 100%;" />
+        </ng-template>
+        <ng-template pTemplate="thumbnail" let-item>
+            <div class="grid grid-nogutter justify-content-center">
+                <img [src]="item.thumbnailImageSrc" />
+            </div>
+        </ng-template>
+    </p-galleria>
+</div>
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesvqykni5mA92V-obxEtMVMeCKcVvJ5enUul1prIJjDEhBog/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>    
     
-    
+<div class="layout-footer">
+    <ul>
+        <li>contend</li>
+        <li>asdasdasd</li>
+        <li>asdasd</li>
+    </ul>
+</div>
